# voice_agents_livekit

./: .env.example  .gitignore  01_voice_agent.py  02_restaurant_agent.py  README.md  pyproject.toml
src/: models.py
