[project]
name = "voice-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "livekit-agents>=1.2.15",
    "livekit-plugins-deepgram>=1.2.15",
    "livekit-plugins-elevenlabs>=1.2.15",
    "livekit-plugins-noise-cancellation>=0.2.5",
    "livekit-plugins-openai>=1.2.15",
    "livekit-plugins-silero>=1.2.15",
    "livekit-plugins-turn-detector>=1.2.15",
    "setuptools>=80.9.0",
]
